--- a/scrapper.ipynb
+++ b/scrapper.ipynb
@@ -91,7 +91,7 @@
     }
    ],
    "source": [
-    "# This is the code for the lated tenders\n",
+    "# This is the code for the lated Corrigendum\n",
     "\n",
     "driver = webdriver.Edge()\n",
     "url = \"https://etenders.gov.in/eprocure/app\"\n",
